--- a/src/routes/future.css
+++ b/src/routes/future.css
@@ -43,6 +43,7 @@
     height: 100%;
     font-size: 1.2rem;
     font-weight: 300;
+    line-height: 2;
     /* background-color: lightgreen; */
 }
 .futureGoalsBox{
@@ -57,8 +58,9 @@
     padding-bottom: 7rem;
 }
 .tech{
-    width: 100%;
-    height: 20vh;
+    width: 300px;
+    height: auto;
+    object-fit: cover;
     /* background-color: lightblue; */
     margin-top: -7rem;
 }
